Voltando commit