@@ -5,14 +5,12 @@ import com.unicesumar.govinizacao.domain.model.veiculo.Veiculo;
 import com.unicesumar.govinizacao.domain.model.veiculo.VeiculoDTO;
 import com.unicesumar.govinizacao.domain.model.veiculo.VeiculoListDTO;
 import com.unicesumar.govinizacao.domain.model.veiculo.VeiculoService;
-import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v0/veiculo")
@@ -26,7 +24,7 @@ public class VeiculoRestController {
     @GetMapping()
     public ResponseEntity<List<VeiculoListDTO>> listVeiculos() {
         List<Veiculo> list = veiculoService.findAll();
-        List<VeiculoListDTO> dto = list.stream().map(VeiculoListDTO::new).collect(Collectors.toList());
+        List<VeiculoListDTO> dto = list.stream().map(VeiculoListDTO::new).toList();
         return new ResponseEntity<>(dto, HttpStatus.OK);
     }
 
@@ -36,7 +34,7 @@ public class VeiculoRestController {
     }
 
     @PostMapping(value = "", consumes = "application/json")
-    public ResponseEntity<VeiculoDTO> save(@RequestBody @Valid VeiculoDTO dto) {
+    public ResponseEntity<VeiculoDTO> save(@RequestBody  VeiculoDTO dto) {
         Veiculo veiculo = new Veiculo();
         veiculo.setPlaca(dto.placa);
         veiculo.setQuilometragem(dto.quilometragem);
